# AAE590ACA-Stochastic-SCP-Rocket-Landing

./: 2dofwork_nogstm.mat  3DoF_deterministic_Workspace.mat  ASA_PSPSP_PSet_1_answers.m  Compressed_Time_Step_2dof_Experiment.mat  Copy_of_DQG_6DoF_fixedtf.m  DQG_6DoF.m  DQG_6DoF_fixedtf.m  DQG_6DoF_fixedtf_test.m  Deterministic3DoF_clarabel.py  Deterministic3DoF_clarabel_FOH.py  Deterministic3DoF_clarabel_FOH_cgen.py  Deterministic_2DoF_linear.m  Deterministic_2DoF_linear_freetf.m  Deterministic_2DoF_linear_func.m  Deterministic_3DoF.asv  Deterministic_3DoF.m  Deterministic_3DoF_linear.m  Deterministic_3DoF_linear_func.m  Deterministic_3DoF_with_mass.m  Deterministic_3DoF_with_mass_convexified.m  Deterministic_3DoF_with_mass_convexified_freetf.m  Deterministic_3DoF_with_mass_convexified_reynolds.m  Deterministic_3DoF_with_mass_convexified_takeoffdivert.m  Deterministic_3DoF_with_mass_polar.m  Deterministic_6DoF.asv  Deterministic_6DoF.m  Deterministic_6DoF_convexified.m  Deterministic_6DoF_reynolds.m  Deterministic_6DoF_reynolds_quat.m  N40.mat  README.md  Stochastic_2DoF_linear.m  Stochastic_2DoF_linear_freetf.m  Stochastic_3DoF_preConvex.m  Stochastic_3dof.asv  Stochastic_3dof.m  Stochastic_6DoF.m  SymDynamics6DoF_q.m  UQLab_test.asv  UQLab_test.m  (+34 more)
Deterministic SCP/: CasADi_solve.m  CasADi_solve_6DoF.m  CasADi_solve_6DoF_mass_convexified.m  CasADi_solve_6DoFdqg.m  CasADi_solve_mass.m  CasADi_solve_mass_convexified.m  CasADi_solve_mass_convexified_freetf.m  DeterministicProblem.asv  DeterministicProblem.m  eval_nonconvex_constraints.m  guess_3DoF.m  linearize_constraint.m  ptr.asv  ptr.m  ptr_virtual_state.m  solve_ptr_convex_subproblem.asv  solve_ptr_convex_subproblem.m  solve_ptr_convex_subproblem_no_p.m  solve_ptr_convex_subproblem_no_p_CVXPY.m  solve_ptr_convex_subproblem_no_p_virtual_state.m
Deterministic SCP/PIPG/: L2_hypersphere_preconditioning.m  PIPG.m  PIPG_new.m  PIPG_new_explicit.m  PIPG_new_explicit.prj  PIPG_new_explicit_nostop.m  PIPG_new_explicit_nostop.prj  PIPG_no_preconditioning.m  PIPG_orig.m  PIPG_orig_precond.m  PIPG_orig_precond.prj  PIPG_orig_precond_Dexplicit.m  PIPG_orig_precond_Dexplicit_mex.mexw64  PIPG_scaled.m  PIPG_scaled_new.m  custom_L2_hypersphere_preconditioning.m  custom_PIPG.m  custom_power_iteration.m  custom_power_iteration.prj  custom_power_iteration_noops.m  custom_power_iteration_noops.prj  custom_stopping.m  cvx_PIPG.m  cvx_PIPG_pc.m  cvx_PIPG_scaled.m  cvx_PIPG_scaled_constraints_only.m  general_cvx_PIPG.m  most_general_cvx_PIPG.m  pipg_general_test.m  pipg_general_test_scaled.m  pipg_test.m  pipg_test_alt.m  power_iteration.m  projection_test.m  stopping.m
Deterministic_3DoF_FOH_PTR_QOCO/: cpg_module.cp39-win_amd64.pyd
Deterministic_3DoF_FOH_PTR_QOCO2/: LICENSE  README.html  cpg_module.cp39-win_amd64.pyd  cpg_solver.py  problem.pickle  setup.py
Deterministic_3DoF_FOH_PTR_QOCO2/c/: CMakeLists.txt
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/: CMakeLists.txt
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/configure/: qoco_config.h.in
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/include/: cone.h  definitions.h  enums.h  equilibration.h  input_validation.h  kkt.h  qoco.h  qoco_api.h  qoco_config.h  qoco_linalg.h  qoco_status.h  qoco_utils.h  structs.h  timer.h
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/lib/amd/: CMakeLists.txt  SuiteSparse_config.c  SuiteSparse_config.h  amd.h  amd_1.c  amd_2.c  amd_aat.c  amd_control.c  amd_defaults.c  amd_dump.c  amd_info.c  amd_internal.h  amd_order.c  amd_post_tree.c  amd_postorder.c  amd_preprocess.c  amd_valid.c  amd_version.c
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/lib/qdldl/: CMakeLists.txt
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/lib/qdldl/include/: qdldl.h  qdldl_types.h
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/lib/qdldl/src/: qdldl.c
Deterministic_3DoF_FOH_PTR_QOCO2/c/solver_code/src/: cone.c  equilibration.c  input_validation.c  kkt.c  qoco_api.c  qoco_linalg.c  qoco_status.c  qoco_utils.c  timer_linux.c  timer_macos.c  timer_windows.c
Dynamics Models/2DoF_linear/: SymDynamics2DoF_linear.m  SymDynamics2DoF_linear_noumag.m  SymDynamics3DoF_linear.m  SymbolicState2DoF_linear.m  SymbolicState2DoF_linear_noumag.m
Dynamics Models/3DoF/: A_3DoF.m  B_3DoF.m  S_3DoF.m  SymDynamics3DoF.m  SymDynamics3DoF_mass.m  SymDynamics3DoF_mass_convexified.m  SymDynamics3DoF_mass_convexified_Force.m  SymDynamics3DoF_mass_convexified_MassRate.m  SymDynamics3DoF_mass_convexified_Moment.m  SymDynamics3DoF_mass_convexified_freetf.m  SymDynamics3DoF_mass_convexified_noumag.m  SymDynamics3DoF_mass_noumag.m  SymDynamics3DoF_mass_polar.m  SymbolicState3DoF.m  SymbolicState3DoF_mass.m  SymbolicState3DoF_mass_convexified.m  SymbolicState3DoF_mass_convexified_freetf.m  SymbolicState3DoF_mass_convexified_noumag.m  SymbolicState3Dof_mass_noumag.m  SymbolicState3Dof_mass_polar.m
Dynamics Models/3DoF_linear/: SymDynamics3DoF_linear.m  SymbolicState3DoF_linear.m
Dynamics Models/6DoF/: SymDynamicsDualQuat6DoF.m  (+20 more)
IEKF/: Group_Error_Propagation_test.m  IEKF.m  LIEKF.m  TFG_IEKF.m  group_error.m  linearized_group_error.m  test_estimators_6DoF.m  test_estimators_6DoF_tracklocalrot.m
Results/: Deterministic_convexified_3DoF_workspace.mat
Stochastic SCP/: StochasticProblem.asv  StochasticProblem.m  Stochastic_ptr.m  Stochastic_ptr_Job.m  Stochastic_ptr_memoryefficient.m  batch_stoch_ptr.m  find_P_yk.m  get_P_k_root.m  recover_est_covariances.m  recover_gain_matrix.m  solve_stochastic_ptr_convex_subproblem.m  solve_stochastic_ptr_convex_subproblem_no_p.asv  solve_stochastic_ptr_convex_subproblem_no_p.m  solve_stochastic_ptr_convex_subproblem_no_p_2.m  solve_stochastic_ptr_convex_subproblem_no_p_CVXPY.m  solve_stochastic_ptr_convex_subproblem_no_p_slackcontrol.m  stochastic_2DoF_model.m  stochastic_3DoF_model.m  stochastic_3DoF_model_test.m  stochastic_model.m  thrust_magnitude_bound.m
UQLab_Rel2.1.0/: CHANGELOG  LICENSE  ListOfFiles
Vehicles/: Vehicle.m
abrupt-SINDY/: SINDYc_Python.m  SINDYc_weak.m  SINDy.m  abrupt_SINDy.m  model_divergence.m  prediction_horizon.m
(+1227 files in other folders)
